# note-para-sweep

./: .gitignore  INTERACTIVE_DISCUSSION_EXAMPLE.md  README.md  config.yaml.template  pyproject.toml  test_interactive_discussion.py
demo_vault/0. Inbox/: 待分类笔记.md
demo_vault/1. Projects/移动应用开发/: 开发笔记.md
demo_vault/1. Projects/网站重构项目/: 项目计划.md
demo_vault/2. Areas/健康管理/: 日常习惯.md
demo_vault/3. Resources/编程资源/: Python学习.md
src/note_para_sweep/: __init__.py  cli.py  config.py  file_operations.py  llm_client.py  scanner.py
